--- a/.github/workflows/blog.yml
+++ b/.github/workflows/blog.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@main
 
       - name: "📚  Hashnode Updater"
-        uses: "varunsridharan/action-hashnode-blog@main"
+        uses: "Shubham/action-hashnode-blog@main"
         with:
-          USERNAME: 'your-username'
+          USERNAME: 'Shubh28698'
           COUNT: 10
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
